--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+            .fullscreen-bg {
+                position: fixed;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                overflow: hidden;
+                z-index: -100;
+            }
+
+            .fullscreen-bg__video {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
+    </head>
     <body>
-        <video width="640" height="480" style="display:block; margin:0 auto;" controls autoplay>
-            <source src="test.mp4" type="video/mp4">
-        </video>
+        <div class="fullscreen-bg">
+            <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+                <source src="main.mp4" type="video/mp4">
+            </video>
+        </div>
     </body>
 </html>
